Финальное ТЗ спринт 10 Версия 2 (правки)